Add Portfolio Link

--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
             <p class="answer">
                 <a href="index.html">stmviz</a> is a real-time <a href="https://en.wikipedia.org/wiki/Gale%E2%80%93Shapley_algorithm">Stable Marriage Algorithm</a> Visualizer.
                 This application uses the classic version made by David Gale and Lloyd Shapley. With the visualizer, you are able to see how the algorithm
-                works step-by-step. The visualizer was developed by <a href="https://github.com/sevora">@sevora</a> for the <a href="https://www.algoexpert.io/swe-project-contests/2020-summer">AlgoExpert SWE Project Contest Summer-Fall 2020.</a>
+                works step-by-step. The visualizer was developed by <a href="https://sevora.github.io/portfolio/">@sevora</a> for the <a href="https://www.algoexpert.io/swe-project-contests/2020-summer">AlgoExpert SWE Project Contest Summer-Fall 2020.</a>
             </p>
         </div>
          <div class="partition">
@@ -100,5 +100,12 @@
                 Yes. The source code for this visualizer is open to the public and is hosted <a href="https://github.com/sevora/stmviz">@Github</a>.
             </p>
         </div>
+
+        <div class="partition">
+            <p class="question">Interested in more works?</p>
+            <p class="answer">Well, you could check out more <a href="https://sevora.github.io/portfolio/">here.</a></p>
+        </div>
+
+
     </body>
 </html>
