--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="description" content="Visualize Stable Matching Algorithm In Real-Time.">
-        <meta name="keywords" content="algorithm, stable, matching, stable matching, visualization, visualizer, visualize">
+        <meta name="keywords" content="algorithm, stable, matching, stable matching, visualization, visualizer, visualize, ralphlouisgopez, sevora">
         <meta name="author" content="Ralph Louis Gopez">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
 
