Update Metadata Since I changed the hosting service, this needs to be updated.

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         <!-- Facebook OpenGraph -->
         <meta property="og:title" content="stmvz | Stable Matching Algorithm Visualizer">
         <meta property="og:description" content="Explore the stable marriage algorithm in real-time.">
-        <meta property="og:image" content="https://stmviz.herokuapp.com/images/large.png">
-        <meta property="og:url" content="https://stmviz.herokuapp.com/index.html">
+        <meta property="og:image" content="https://sevora.github.io/stmviz/images/large.png">
+        <meta property="og:url" content="https://sevora.github.io/stmviz/index.html">
 
         <!-- Twitter -->
         <meta name="twitter:title" content="stmviz | Stable Matching Algorithm Visualizer">
         <meta name="twitter:description" content="Explore the stable marriage algorithm in real-time.">
-        <meta name="twitter:image" content="https://stmviz.herokuapp.com/images/large.png">
+        <meta name="twitter:image" content="https://sevora.github.io/stmviz/images/large.png">
         <meta name="twitter:card" content="summary_large_image">
 
         <title>stmviz - Stable Matching Visualization</title>
